--- a/Pipfile
+++ b/Pipfile
@@ -4,14 +4,19 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pandas = "*"
 requests = "*"
+pandas = "*"
+scipy = "*"
+matplotlib = "*"
+ipython = "*"
+jupyter = "*"
+sympy = "*"
+nose = "*"
 arviz = "*"
 pymc3 = "*"
-ipykernel = "*"
-numpy = "*"
+numpy = "==1.20.3"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.9"
